--- a/src/Cekurte/ZCPEBundle/Resources/views/Question/edit.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Question/edit.html.twig
@@ -27,11 +27,6 @@
         <input type="hidden" name="_method" value="PUT" />
         {{ form_widget(edit_form) }}
 
-        <div id="answer-message" class="alert alert-danger alert-dismissable fade">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-            <strong>{{ 'Error'|trans }}!</strong> <span class="message">{{ 'Select correct answer.'|trans }}</span>
-        </div>
-
         <div class="form-group">
             <div class="col-lg-2">
                 <label for="answers">{{ 'Answers'|trans }}</label>:
@@ -52,7 +47,14 @@
                 </div>
             </div>
         </div>
-        {% include 'CekurteGeneratorBundle:Action:form-actions.html.twig' %}
+
+        {% include 'CekurteZCPEBundle:Question:modal-save.html.twig' %}
+
+        {% embed 'CekurteGeneratorBundle:Action:form-actions.html.twig' %}
+            {% block action_submit_open %}
+                <button id="formQuestionSubmit" type="submit" class="btn btn-primary">
+            {% endblock %}
+        {% endembed %}
     </form>
 {% endblock %}
 
@@ -79,4 +81,3 @@
         });
     </script>
 {%- endblock -%}
-
