--- a/src/Cekurte/ZCPEBundle/Resources/views/Question/new.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Question/new.html.twig
@@ -14,11 +14,6 @@
     <form id="question" class="form-horizontal" role="form" action="{{ path('admin_question_create') }}" method="post" {{ form_enctype(form) }}>
         {{ form_widget(form) }}
 
-        <div id="answer-message" class="alert alert-danger alert-dismissable fade">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-            <strong>{{ 'Error'|trans }}!</strong> <span class="message">{{ 'Select correct answer.'|trans }}</span>
-        </div>
-
         <div class="form-group">
             <div class="col-lg-2">
                 <label for="answers">{{ 'Answers'|trans }}</label>:
@@ -37,7 +32,14 @@
                 </div>
             </div>
         </div>
-        {% include 'CekurteGeneratorBundle:Action:form-actions.html.twig' %}
+
+        {% include 'CekurteZCPEBundle:Question:modal-save.html.twig' %}
+
+        {% embed 'CekurteGeneratorBundle:Action:form-actions.html.twig' %}
+            {% block action_submit_open %}
+                <button id="formQuestionSubmit" type="submit" class="btn btn-primary">
+            {% endblock %}
+        {% endembed %}
     </form>
 {% endblock %}
 
