--- a/src/Cekurte/ZCPEBundle/Resources/views/Question/new.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Question/new.html.twig
@@ -53,6 +53,7 @@
 {%- block javascripts -%}
     {{ parent() }}
     <script src="{{ asset('bundles/cekurtezcpe/js/question-and-answer.js') }}"></script>
+    <script src="{{ asset('bundles/cekurtezcpe/js/question-and-answer-authenticated.js') }}"></script>
     <script src="{{ asset('vendor/select2/select2.min.js') }}"></script>
     <script src="{{ asset('vendor/select2/select2_locale_pt-BR.js') }}"></script>
     <script type="text/javascript">
