--- a/src/Cekurte/ZCPEBundle/Resources/views/Default/modal-email-template.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Default/modal-email-template.html.twig
@@ -26,7 +26,7 @@
 {{ '@CekurteSistemas' -}}
         </pre>
         <div id="message_clipboard_text_has_copied" class="alert alert-success alert-dismissible hide" role="alert">
-            <strong>{{ 'Success'|trans }}!</strong> {{ 'The text has copied to clipboard with successfully' }}.
+            <strong>{{ 'Success'|trans }}!</strong> {{ 'The text has copied to clipboard with successfully'|trans }}.
         </div>
     {% endblock %}
     {% block action_close %}
