--- a/src/Cekurte/ZCPEBundle/Resources/views/layout-menu-question.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/layout-menu-question.html.twig
@@ -1,4 +1,4 @@
-{% extends 'CekurteGeneratorBundle::layout.html.twig' %}
+{% extends 'CekurteZCPEBundle::layout.html.twig' %}
 
 {% block menu %}
     {% set menu_active = 'question' %}
