--- a/src/Cekurte/ZCPEBundle/Resources/views/Default/loginAdmin.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Default/loginAdmin.html.twig
@@ -15,9 +15,9 @@
             <div id="output"></div>
             <div class="form-box">
                 <div class="row">
-                    <h2 class="pull-left">Login<small> Autenticação</small></h2>
+                    <h2 class="pull-left">{{ 'Login'|trans }}<small> {{ 'Authentication'|trans }}</small></h2>
                 </div>
-                <a href="{{ hwi_oauth_login_url('google') }}" class="btn btn-lg btn-danger">Google Login</a>
+                <a href="{{ hwi_oauth_login_url('google') }}" class="btn btn-lg btn-danger">{{ 'Login with Google Account'|trans }}</a>
             </div>
         </div>
     </div>
