--- a/src/Cekurte/ZCPEBundle/Resources/views/Default/index.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Default/index.html.twig
@@ -77,6 +77,9 @@
             $('select#cekurte_zcpebundle_questionform_questionType').select2({
                 width: '400px'
             });
+            $('select#cekurte_zcpebundle_questionform_choose').select2({
+                width: '400px'
+            });
 
             ZeroClipboard.config({
                 swfPath: "{{ asset('vendor/zeroclipboard/dist/ZeroClipboard.swf') }}"
