Ajustes no botão de login.

--- a/src/Cekurte/ZCPEBundle/Resources/views/Default/loginAdmin.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Default/loginAdmin.html.twig
@@ -17,7 +17,7 @@
                 <div class="row">
                     <h2 class="pull-left">{{ 'Login'|trans }}<small> {{ 'Authentication'|trans }}</small></h2>
                 </div>
-                <a href="{{ hwi_oauth_login_url('google') }}" class="btn btn-lg btn-danger">{{ 'Login with Google Account'|trans }}</a>
+                <a href="{{ hwi_oauth_login_url('google') }}" class="btn btn-danger">{{ 'Login with a Google Account'|trans }}</a>
             </div>
         </div>
     </div>
