--- a/src/Cekurte/ZCPEBundle/Resources/views/Question/show.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Question/show.html.twig
@@ -98,6 +98,16 @@
                         {% endif %}
                     </td>
                 </tr>
+                <tr>
+                    <th>{{ 'Revised'|trans ~ '?'}}</th>
+                    <td>
+                        {% if entity.revised == true %}
+                            <button type="button" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok"></span> {{ 'Yes'|trans }}</button>
+                        {% else %}
+                            <button type="button" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove"></span> {{ 'No'|trans }}</button>
+                        {% endif %}
+                    </td>
+                </tr>
             </tbody>
         </table>
         <table class="table table-hover table-show">
