--- a/src/Cekurte/ZCPEBundle/Resources/views/Question/index.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Question/index.html.twig
@@ -52,19 +52,17 @@
                     </td>
                     <td>{{ entity.title|truncate(50)|raw }}</td>
                     <td>
-                        {% if entity.emailHasSent == true %}
-                            <button type="button" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok"></span> {{ 'Yes'|trans }}</button>
-                        {% else %}
-                            <button type="button" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove"></span> {{ 'No'|trans }}</button>
-                        {% endif %}
+                        {% embed 'CekurteZCPEBundle:Question:boolean-action.html.twig' with {
+                            'fieldValue'        : entity.emailHasSent
+                        } only %}
+                        {% endembed %}
                     </td>
                     {% if is_granted('ROLE_ADMIN') %}
                         <td>
-                            {% if entity.approved == true %}
-                                <button type="button" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok"></span> {{ 'Yes'|trans }}</button>
-                            {% else %}
-                                <button type="button" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove"></span> {{ 'No'|trans }}</button>
-                            {% endif %}
+                            {% embed 'CekurteZCPEBundle:Question:boolean-action.html.twig' with {
+                                'fieldValue'        : entity.approved
+                            } only %}
+                            {% endembed %}
                         </td>
                     {% endif %}
                     {% if cekurte_is_granted('RETRIEVE') or cekurte_is_granted('UPDATE') or cekurte_is_granted('DELETE') %}
