--- a/src/Cekurte/ZCPEBundle/Resources/views/Question/show.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Question/show.html.twig
@@ -51,11 +51,10 @@
                 <tr>
                     <th>{{ 'Email has sent'|trans ~ '?'}}</th>
                     <td>
-                        {% if entity.emailHasSent == true %}
-                            <button type="button" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok"></span> {{ 'Yes'|trans }}</button>
-                        {% else %}
-                            <button type="button" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove"></span> {{ 'No'|trans }}</button>
-                        {% endif %}
+                        {% embed 'CekurteZCPEBundle:Question:boolean-action.html.twig' with {
+                            'fieldValue'        : entity.emailHasSent
+                        } only %}
+                        {% endembed %}
                     </td>
                 </tr>
                 <tr>
@@ -69,33 +68,30 @@
                             {% endif %}
                         {% endfor %}
 
-                        {% if questionHasOneOrMoreCorrectAnswers == true %}
-                            <button type="button" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok"></span> {{ 'Yes'|trans }}</button>
-                        {% else %}
-                            <button type="button" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove"></span> {{ 'No'|trans }}</button>
-                        {% endif %}
+                        {% embed 'CekurteZCPEBundle:Question:boolean-action.html.twig' with {
+                            'fieldValue'        : questionHasOneOrMoreCorrectAnswers
+                        } only %}
+                        {% endembed %}
                     </td>
                 </tr>
                 {% if is_granted('ROLE_ADMIN') %}
                     <tr>
                         <th>{{ 'Approved'|trans ~ '?'}}</th>
                         <td>
-                            {% if entity.approved == true %}
-                                <button type="button" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok"></span> {{ 'Yes'|trans }}</button>
-                            {% else %}
-                                <button type="button" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove"></span> {{ 'No'|trans }}</button>
-                            {% endif %}
+                            {% embed 'CekurteZCPEBundle:Question:boolean-action.html.twig' with {
+                                'fieldValue'        : entity.approved
+                            } only %}
+                            {% endembed %}
                         </td>
                     </tr>
                 {% endif %}
                 <tr>
                     <th>{{ 'Imported from Google Groups'|trans ~ '?'}}</th>
                     <td>
-                        {% if entity.importedFromGoogleGroups == true %}
-                            <button type="button" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-ok"></span> {{ 'Yes'|trans }}</button>
-                        {% else %}
-                            <button type="button" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove"></span> {{ 'No'|trans }}</button>
-                        {% endif %}
+                        {% embed 'CekurteZCPEBundle:Question:boolean-action.html.twig' with {
+                            'fieldValue'        : entity.importedFromGoogleGroups
+                        } only %}
+                        {% endembed %}
                     </td>
                 </tr>
                 <tr>
