Removed the "Question Type" and "@CekurteSistemas" from email template.

--- a/src/Cekurte/ZCPEBundle/Resources/views/Default/modal-email-template.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Default/modal-email-template.html.twig
@@ -18,12 +18,9 @@
         <pre id="email_template">
 <span>{{- 'Category'|trans }}:</span> <span id="question_category"></span>.
 
-<span>{{ 'Question type'|trans }}:</span> <span id="question_type"></span>.
-
 <span id="question_title"></span>
 
-<span id="question_answers"></span>
-<span>{{ '@CekurteSistemas' -}}</span>{{- '' -}}
+<span id="question_answers"></span>{{- '' -}}
         </pre>
         <div id="message_clipboard_text_has_copied" class="alert alert-success alert-dismissible hide" role="alert">
             <strong>{{ 'Success'|trans }}!</strong> {{ 'The text has copied to clipboard with successfully'|trans }}.
