--- a/src/Cekurte/ZCPEBundle/Resources/views/Anonymous/index.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Anonymous/index.html.twig
@@ -1,17 +1,17 @@
 {% extends 'CekurteZCPEBundle::layout.html.twig' %}
 
 {% block menu %}
-    <li class="active">
+    <li class="">
         <a href="{{ path("home") }}"><span class="glyphicon glyphicon-home"></span> {{ 'Home' | trans }}</a>
     </li>
 {% endblock %}
 
 {% set title    = 'Question'|trans %}
-{% set subtitle = 'Generate E-mail Template'|trans %}
+{% set subtitle = 'Generate e-mail template'|trans %}
 
 {% block links %}
-    <a href="{{ path('admin_fos_user_security_login') }}" class="btn btn-default" title="{{ 'Send email using Google Gmail Account'|trans }}">
-        <span class="glyphicon glyphicon-user"></span> {{ 'Send email using Google Gmail Account'|trans }}
+    <a href="{{ path('home') }}" class="btn btn-default" title="{{ 'Go back to home'|trans }}">
+        <span class="glyphicon glyphicon-chevron-left"></span> {{ 'Go back'|trans }}
     </a>
 {% endblock %}
 
@@ -38,8 +38,8 @@
             </div>
         </div>
 
-        {% include 'CekurteZCPEBundle:Default:modal-email-template.html.twig' %}
-        {% include 'CekurteZCPEBundle:Default:modal-validation-error.html.twig' %}
+        {% include 'CekurteZCPEBundle:Anonymous:modal-email-template.html.twig' %}
+        {% include 'CekurteZCPEBundle:Anonymous:modal-validation-error.html.twig' %}
 
         {% embed 'CekurteGeneratorBundle:Action:form-actions.html.twig' %}
             {% block action_reset %}{% endblock %}
