Link to login with Google Account.

--- a/src/Cekurte/ZCPEBundle/Resources/views/Default/home.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Default/home.html.twig
@@ -37,7 +37,7 @@
                             {{ 'Allows the user access the application with your credentials (username and password)'|trans }}.
                         </p>
                     </a>
-                    <a href="#" class="list-group-item">
+                    <a href="{{ hwi_oauth_login_url('google') }}" class="list-group-item">
                         <span class="glyphicon glyphicon-chevron-right pull-right" style="top: 16px !important;"></span>
                         <h4 class="list-group-item-heading">
                             <span class="glyphicon glyphicon-share"></span> {{ 'With a Google Account'|trans }}
